# Pytorch_Static_Analyzer

./: CHANGELOG.md  README.md
1_ExportingIR/: 1_exportIr.py  2_testPre.py
2_EstimateMem/: CMakeLists.txt  README.txt  main.cpp
data/: mlp_code.txt  mlp_ir.txt  mlp_scripted.pt  pt_lookInside.py
